* Add feature: i18n, dark mode, more seo improve.

--- a/calculators/401k.html
+++ b/calculators/401k.html
@@ -1,8 +1,23 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="auto">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Theme color for mobile browsers -->
+    <meta name="theme-color" content="#ffffff" media="(prefers-color-scheme: light)">
+    <meta name="theme-color" content="#0f172a" media="(prefers-color-scheme: dark)">
+
+    <!-- Prevent flash of wrong theme -->
+    <script>
+        (function() {
+            const theme = localStorage.getItem('fincalc-theme') || 'auto';
+            const effective = theme === 'auto'
+                ? (window.matchMedia('(prefers-color-scheme: dark)').matches ? 'dark' : 'light')
+                : theme;
+            document.documentElement.setAttribute('data-theme', theme);
+            document.documentElement.setAttribute('data-effective-theme', effective);
+        })();
+    </script>
     <title>401(k) Calculator - Maximize Your Retirement Savings</title>
     <meta name="description" content="Free 401(k) calculator. See how your contributions grow, maximize employer matching, and plan for a comfortable retirement.">
     <meta name="keywords" content="401k calculator, retirement calculator, employer match calculator, 401k contribution calculator">
@@ -22,15 +37,25 @@
     <header>
         <nav class="container">
             <a href="../" class="logo">FinCalc</a>
+            <button class="mobile-menu-toggle" aria-label="Toggle menu" aria-expanded="false">
+                <span></span>
+                <span></span>
+                <span></span>
+            </button>
             <ul class="nav-links">
                 <li><a href="../#calculators">Calculators</a></li>
-                    <li><a href="/blog/">Blog</a></li>
+                <li><a href="/blog/">Blog</a></li>
                 <li><a href="../#about">About</a></li>
             </ul>
+            <div class="nav-controls">
+                <!-- Language selector and theme toggle will be injected by JS -->
+            </div>
         </nav>
     </header>
 
-    <main class="calc-page">
+    <a href="#main-content" class="skip-link">Skip to main content</a>
+
+    <main id="main-content" class="calc-page">
         <div class="calc-container">
             <nav class="breadcrumb">
                 <a href="../">Home</a> <span>/ 401(k) Calculator</span>
@@ -165,9 +190,9 @@
                 </h3>
                 <p>Stay informed about contribution limits and retirement account rules:</p>
                 <div class="policy-grid">
-                    <a href="https://www.google.com/search?q=401k+contribution+limits+2025" target="_blank" rel="noopener" class="policy-link">
+                    <a href="https://www.google.com/search?q=401k+contribution+limits+2026" target="_blank" rel="noopener" class="policy-link">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"></path><polyline points="15 3 21 3 21 9"></polyline><line x1="10" y1="14" x2="21" y2="3"></line></svg>
-                        2025 Contribution Limits
+                        2026 Contribution Limits
                     </a>
                     <a href="https://www.google.com/search?q=401k+catch+up+contributions+age+50" target="_blank" rel="noopener" class="policy-link">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"></path><polyline points="15 3 21 3 21 9"></polyline><line x1="10" y1="14" x2="21" y2="3"></line></svg>
@@ -199,7 +224,7 @@
                 <h3>The Power of Employer Matching</h3>
                 <p>Employer matching is essentially free money. If your employer matches 50% of contributions up to 6% of your salary, you should contribute at least 6% to get the full match. Not doing so is leaving money on the table.</p>
 
-                <h3>2025 Contribution Limits</h3>
+                <h3>2026 Contribution Limits</h3>
                 <ul>
                     <li><strong>Under 50:</strong> $23,500 employee contribution limit</li>
                     <li><strong>50 and older:</strong> Additional $7,500 catch-up contribution allowed</li>
@@ -219,12 +244,23 @@
 
     <footer>
         <div class="container">
-            <p>© 2025 FinCalc. All rights reserved.</p>
+            <p>© 2026 FinCalc. All rights reserved.</p>
             <p class="disclaimer">Disclaimer: This calculator provides estimates only. Actual returns will vary. Consult a financial advisor for personalized retirement planning.</p>
         </div>
     </footer>
 
+    <!-- Theme Manager -->
+    <script src="../js/theme.js"></script>
+    <!-- Internationalization -->
+    <script src="../js/i18n.js"></script>
     <script src="../js/401k.js"></script>
     <script src="../js/monetization.js"></script>
+    <script>
+        document.querySelector('.mobile-menu-toggle')?.addEventListener('click', function() {
+            this.classList.toggle('active');
+            this.setAttribute('aria-expanded', this.classList.contains('active'));
+            document.querySelector('.nav-links')?.classList.toggle('open');
+        });
+    </script>
 </body>
 </html>
