--- a/calculators/self-employment-tax.html
+++ b/calculators/self-employment-tax.html
@@ -1,8 +1,23 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="auto">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Theme color for mobile browsers -->
+    <meta name="theme-color" content="#ffffff" media="(prefers-color-scheme: light)">
+    <meta name="theme-color" content="#0f172a" media="(prefers-color-scheme: dark)">
+
+    <!-- Prevent flash of wrong theme -->
+    <script>
+        (function() {
+            const theme = localStorage.getItem('fincalc-theme') || 'auto';
+            const effective = theme === 'auto'
+                ? (window.matchMedia('(prefers-color-scheme: dark)').matches ? 'dark' : 'light')
+                : theme;
+            document.documentElement.setAttribute('data-theme', theme);
+            document.documentElement.setAttribute('data-effective-theme', effective);
+        })();
+    </script>
     <title>Self-Employment Tax Calculator - Calculate SE Tax & Quarterly Payments</title>
     <meta name="description" content="Calculate your self-employment tax, estimated quarterly payments, and total tax liability. Essential for freelancers, contractors, and small business owners.">
     <meta name="keywords" content="self-employment tax calculator, SE tax, quarterly taxes, freelancer taxes, 1099 tax calculator">
@@ -47,19 +62,28 @@
     </style>
 </head>
 <body>
-    <nav class="navbar">
-        <div class="nav-container">
-            <a href="../index.html" class="nav-logo">FinanceCalc</a>
-            <ul class="nav-menu">
-                <li><a href="../index.html">Home</a></li>
+    <header>
+        <nav class="container">
+            <a href="../" class="logo">FinCalc</a>
+            <button class="mobile-menu-toggle" aria-label="Toggle menu" aria-expanded="false">
+                <span></span>
+                <span></span>
+                <span></span>
+            </button>
+            <ul class="nav-links">
+                <li><a href="../#calculators">Calculators</a></li>
                 <li><a href="/blog/">Blog</a></li>
-                <li><a href="#calculator">Calculator</a></li>
-                <li><a href="#guide">Guide</a></li>
+                <li><a href="../#about">About</a></li>
             </ul>
-        </div>
-    </nav>
+            <div class="nav-controls">
+                <!-- Language selector and theme toggle will be injected by JS -->
+            </div>
+        </nav>
+    </header>
 
-    <main class="calculator-page">
+    <a href="#main-content" class="skip-link">Skip to main content</a>
+
+    <main id="main-content" class="calculator-page">
         <div class="container">
             <div class="calculator-header">
                 <h1>Self-Employment Tax Calculator</h1>
@@ -220,12 +244,12 @@
                     </div>
 
                     <div class="card">
-                        <h3>Quarterly Due Dates (2024)</h3>
+                        <h3>Quarterly Due Dates (2026)</h3>
                         <ul class="info-list">
-                            <li><strong>Q1:</strong> April 15, 2024</li>
-                            <li><strong>Q2:</strong> June 17, 2024</li>
-                            <li><strong>Q3:</strong> September 16, 2024</li>
-                            <li><strong>Q4:</strong> January 15, 2025</li>
+                            <li><strong>Q1:</strong> April 15, 2026</li>
+                            <li><strong>Q2:</strong> June 15, 2026</li>
+                            <li><strong>Q3:</strong> September 15, 2026</li>
+                            <li><strong>Q4:</strong> January 15, 2027</li>
                         </ul>
                     </div>
 
@@ -276,11 +300,22 @@
 
     <footer class="footer">
         <div class="container">
-            <p>&copy; 2024 FinanceCalc. For educational purposes only. Consult a tax professional for personalized advice.</p>
+            <p>&copy; 2026 FinCalc. For educational purposes only. Consult a tax professional for personalized advice.</p>
         </div>
     </footer>
 
+    <!-- Theme Manager -->
+    <script src="../js/theme.js"></script>
+    <!-- Internationalization -->
+    <script src="../js/i18n.js"></script>
     <script src="../js/self-employment-tax.js"></script>
     <script src="../js/monetization.js"></script>
+    <script>
+        document.querySelector('.mobile-menu-toggle')?.addEventListener('click', function() {
+            this.classList.toggle('active');
+            this.setAttribute('aria-expanded', this.classList.contains('active'));
+            document.querySelector('.nav-links')?.classList.toggle('open');
+        });
+    </script>
 </body>
 </html>
